server side rendering

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to React</title>
+    <link rel="stylesheet" href="/public/normalize.css">
+    <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
-    <div id="app">React has not yet rendered...</div>
+    <div id="app"><%= body %></div>
     <script src="/public/bundle.js"></script>
   </body>
 </html>
